# comment-remover

./: AGENTS.md  README.md  pyproject.toml
comment_remover/: __init__.py  cli.py  comment_detector.py  file_modifier.py  git_ops.py  language_patterns.py
tests/: __init__.py  test_comment_detector.py  test_e2e.py  test_file_modifier.py  test_language_patterns.py
tests/assets/after/: test.c  test.cs  test.css  test.go  test.html  test.java  test.js  test.kt  test.lua  test.php  test.pl  test.py  test.r  test.rb  test.rs  test.scala  test.sh  test.sql  test.swift  test.ts  test.vim  test.yml
tests/assets/before/: test.cs  test.css  test.java  test.r  test.scala  test.sh  test.sql  test.vim  test.yml
